--- a/LinCon.Avalonia/Views/CaseImportView.xaml
+++ b/LinCon.Avalonia/Views/CaseImportView.xaml
@@ -1,25 +1,20 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LinCon.Avalonia.Views.CaseImportView">
-    <Border Width="1088" Height="600" CornerRadius="15" BorderBrush="White" BorderThickness="1" Background="White">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="70"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="70"/>
-            </Grid.RowDefinitions>
-            <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
+    <Grid RowDefinitions="80 *" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <StackPanel Margin="50 20 0 0" VerticalAlignment="Center" Spacing="20" Orientation="Horizontal">
                 <Button Classes="backBtn" Command="{Binding ReturnCommand}" Width="50"/>
-                <TextBlock FontSize="30" Foreground="#0D47A1">Import new Case</TextBlock>
-            </StackPanel>
-            <Border Grid.Row="1" Name="DropState" Background="Transparent" DragDrop.AllowDrop="True">
-                <StackPanel Name="DragState" Spacing="60" VerticalAlignment="Center" Orientation="Vertical">
+                <TextBlock FontSize="30" Foreground="#0D47A1">Export Case</TextBlock>
+        </StackPanel>
+        <Border DragDrop.AllowDrop="True" Name="DropState" Grid.Row="1" Margin="0 30 0 0" Padding="30 30 30 0" CornerRadius="15" HorizontalAlignment="Center" VerticalAlignment="Center" Background="White">
+            <Grid MinWidth="400" RowDefinitions="* 120">
+                <StackPanel Spacing="30" Orientation="Vertical">
                     <DrawingPresenter Drawing="{DynamicResource NewFile}" Width="60" Height="75" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <TextBlock FontSize="30" HorizontalAlignment="Center">Drag Cases here</TextBlock>
                     <TextBlock FontSize="30" HorizontalAlignment="Center">or</TextBlock>
                 </StackPanel>
-            </Border>
-            <Button FontSize="30" Grid.Row="2" Classes="fromComputerBtn" HorizontalAlignment="Stretch" Command="{Binding ImportCommand}">Choose from your Computer</Button>
-        </Grid>
-    </Border>
+                <Button Grid.Row="1" Margin="-30 30 -30 0" FontSize="30"  Classes="fromComputerBtn" HorizontalAlignment="Stretch" Command="{Binding ImportCommand}">Choose from your Computer</Button>                
+            </Grid>
+        </Border>
+    </Grid>
 </UserControl>
