--- a/LinCon.Avalonia/Views/CaseView.xaml
+++ b/LinCon.Avalonia/Views/CaseView.xaml
@@ -18,7 +18,7 @@
                     </StackPanel>
                     <Grid Grid.Row="1">
                         <ScrollViewer Padding="0 0 10 0">
-                            <ItemsControl Items="{Binding Case.Links}">
+                            <ItemsControl Items="{Binding Links}">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <Border Margin="0 20 0 0" Padding="20 10 20 10"  Background="White" CornerRadius="10">
