--- a/LinCon.Avalonia/Views/CaseView.xaml
+++ b/LinCon.Avalonia/Views/CaseView.xaml
@@ -25,7 +25,7 @@
                                             <Grid Margin="40 0 40 0" HorizontalAlignment="Stretch">
                                                 <TextBlock FontSize="30" VerticalAlignment="Center" Foreground="#212121" Text="{Binding Name}"/>
                                                 <StackPanel HorizontalAlignment="Right" Spacing="15" Orientation="Horizontal">
-                                                   <Button FontSize="30" Classes="defaultBtn" Foreground="Green" CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.OpenLinkCommand}">Open</Button>
+                                                   <Button FontSize="30" Classes="defaultBtn" Foreground="Green" CommandParameter="{Binding Url }" Command="{Binding $parent[ItemsControl].DataContext.OpenLinkCommand}">Open</Button>
                                                    <Button FontSize="30" Classes="defaultBtn" CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.EditLinkCommand}">Edit</Button>
                                                    <Button FontSize="30" Classes="defaultBtn" Foreground="Red" CommandParameter="{Binding }" Command="{Binding $parent[ItemsControl].DataContext.DeleteLinkCommand}">Delete</Button>
                                                 </StackPanel>
